--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-python
-          image: python-image:latest
+          image: leandro
           ports:
             - name: http
               containerPort: 8081
@@ -29,10 +29,13 @@ apiVersion: v1
 metadata:
   name: my-python
 spec:
+  template:
+    spec:
+      containers: []
 ports:
   - name: http-8081
     port: 8081
     protocol: TCP
-    targetPort: 8081
+    targetPort: 8082
 selector:
   app: python-app
