--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,12 +1,10 @@
 schemaVersion: 2.2.0
 metadata:
-  name: python
+  name: leandro
   projectType: Python
   displayName: Python
   icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/python.svg
-  description:
-    'Python is an interpreted, object-oriented, high-level programming language with dynamic semantics.
-    Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together.'
+  description: 'Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together.'
   language: Python
   version: 1.0.1
   provider: Red Hat
@@ -37,9 +35,9 @@ components:
     kubernetes:
       uri: deploy.yaml
       endpoints:
-      - name: http-8081
-        targetPort: 8081
-        path: /
+        - name: http-8081
+          targetPort: 8081
+          path: /
 commands:
   - id: build-image
     apply:
